[project]
name = "social-sync"
version = "0.1.0"
description = "A tool to synchronize posts from Bluesky to Mastodon"
authors = [{ name = "Travis Cole", email = "kelp@plek.org" }]
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "atproto >= 0.0.59",
    "Mastodon.py>=1.8.1",
    "pydantic>=2.6.1",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
mypy = "^1.15.0"
pydocstyle = "^6.3.0"
bandit = "^1.8.3"
pre-commit = "^4.2.0"
