[project]
name = "bluemastodon"
version = "0.9.9"
description = "A tool to synchronize posts from Bluesky to Mastodon"
authors = [{name = "Travis Cole", email = "kelp@plek.org"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.14"
keywords = ["bluesky", "mastodon", "social-media", "cross-posting", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications",
    "Topic :: Internet",
]
dependencies = [
    "atproto>=0.0.61,<0.1.0",
    "mastodon-py[blurhash]>=2.0.1,<3.0.0",
    "pydantic>=2.11.5,<3.0.0",
    "python-dotenv>=1.1.0,<2.0.0",
    "loguru>=0.7.3,<1.0.0",
]

[project.urls]
Homepage = "https://github.com/kelp/bluemastodon"
Repository = "https://github.com/kelp/bluemastodon"
Documentation = "https://github.com/kelp/bluemastodon/tree/main/docs"
"Bug Tracker" = "https://github.com/kelp/bluemastodon/issues"
Changelog = "https://github.com/kelp/bluemastodon/blob/main/CHANGELOG.md"

[project.scripts]
bluemastodon = "bluemastodon:main"

[dependency-groups]
dev = [
    "pytest>=8.3.5,<9.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "black>=26.3.1,<27.0.0",
    "isort>=6.0.1,<7.0.0",
    "flake8>=7.2.0,<8.0.0",
    "mypy>=1.15.0,<2.0.0",
    "pydocstyle>=6.3.0,<7.0.0",
    "bandit>=1.8.3,<2.0.0",
    "pre-commit>=4.2.0,<5.0.0",
    "types-setuptools>=80.8.0.20250521",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bluemastodon"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "dotenv.*",
    "loguru.*",
    "mastodon.*"
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*", "*/venv/*", "*/.venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]
